# read-more

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
pelican/plugins/read_more/: __init__.py  read_more.py
